--- a/.cproject
+++ b/.cproject
@@ -40,6 +40,7 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/tests}&quot;"/>
 <listOptionValue builtIn="false" value="/usr/include/cppunit"/>
+<listOptionValue builtIn="false" value="/usr/local/include/cppunit"/>
 </option>
 <option id="gnu.cpp.compiler.option.preprocessor.nostdinc.839974476" name="Do not search system directories (-nostdinc)" superClass="gnu.cpp.compiler.option.preprocessor.nostdinc"/>
 <option id="gnu.cpp.compiler.option.preprocessor.preprocess.189049189" name="Preprocess only (-E)" superClass="gnu.cpp.compiler.option.preprocessor.preprocess"/>
@@ -69,6 +70,8 @@
 <option id="gnu.cpp.link.option.paths.801012339" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
 <listOptionValue builtIn="false" value="/home/tim/development/planeshift/cal3d/lib"/>
 <listOptionValue builtIn="false" value="/home/tim/development/planeshift/cs/lib"/>
+<listOptionValue builtIn="false" value="/home/tim/development/planeshift/cs"/>
+<listOptionValue builtIn="false" value="/usr/local/lib"/>
 </option>
 <option id="gnu.cpp.link.option.nostart.1806863273" name="Do not use standard start files (-nostartfiles)" superClass="gnu.cpp.link.option.nostart"/>
 <option id="gnu.cpp.link.option.nodeflibs.377195098" name="Do not use default libraries (-nodefaultlibs)" superClass="gnu.cpp.link.option.nodeflibs"/>
@@ -382,7 +385,6 @@
 <option id="gnu.cpp.compiler.exe.debug.option.optimization.level.1505295061" name="Optimization Level" superClass="gnu.cpp.compiler.exe.debug.option.optimization.level" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 <option id="gnu.cpp.compiler.exe.debug.option.debugging.level.2145583457" name="Debug Level" superClass="gnu.cpp.compiler.exe.debug.option.debugging.level" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
 <option id="gnu.cpp.compiler.option.include.paths.330979272" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" valueType="includePath">
-<listOptionValue builtIn="false" value="/usr/include/cppunit"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/include}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/client}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/common}&quot;"/>
@@ -396,6 +398,7 @@
 <listOptionValue builtIn="false" value="/home/tim/development/planeshift/cs/include"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/tests}&quot;"/>
+<listOptionValue builtIn="false" value="/usr/local/include/cppunit"/>
 </option>
 <option id="gnu.cpp.compiler.option.preprocessor.nostdinc.424053760" name="Do not search system directories (-nostdinc)" superClass="gnu.cpp.compiler.option.preprocessor.nostdinc"/>
 <option id="gnu.cpp.compiler.option.preprocessor.preprocess.1096504863" name="Preprocess only (-E)" superClass="gnu.cpp.compiler.option.preprocessor.preprocess"/>
@@ -439,6 +442,9 @@
 <tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.316297226" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug">
 <option id="gnu.cpp.link.option.paths.1332921311" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
 <listOptionValue builtIn="false" value="&quot;/usr/lib&quot;"/>
+<listOptionValue builtIn="false" value="/home/tim/development/planeshift/cal3d/lib"/>
+<listOptionValue builtIn="false" value="/home/tim/development/planeshift/cs"/>
+<listOptionValue builtIn="false" value="/usr/local/lib"/>
 </option>
 <option id="gnu.cpp.link.option.nostart.142661198" name="Do not use standard start files (-nostartfiles)" superClass="gnu.cpp.link.option.nostart"/>
 <option id="gnu.cpp.link.option.nodeflibs.1261237062" name="Do not use default libraries (-nodefaultlibs)" superClass="gnu.cpp.link.option.nodeflibs"/>
