updated project config to correct duplicate path errors and such like.
no-open-ticket

--- a/.project
+++ b/.project
@@ -27,11 +27,11 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildCommand</key>
-					<value>/usr/bin/jam</value>
+					<value>jam</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/PlaneShiftMessageRedirector/Debug}</value>
+					<value>${workspace_loc:/PsaiMessageRedirector/PSAI Build}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
