--- a/.project
+++ b/.project
@@ -55,7 +55,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.fullBuildTarget</key>
-					<value>-q -j3 all</value>
+					<value>-q -j3 -s PS.DEV.DIR=${worlspace_loc} all</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.stopOnError</key>
