re #30: updated project settings to reflect new all in workspace

--- a/.project
+++ b/.project
@@ -31,7 +31,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/PsaiMessageRedirector/PSAI Build}</value>
+					<value>${workspace_loc:/PsaiMessageRedirector/}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
@@ -55,7 +55,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.fullBuildTarget</key>
-					<value>-q -j3 -s PS.DEV.DIR=${worlspace_loc} all</value>
+					<value>-q -s PS.DEV.DIR=${workspace_loc} all</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.stopOnError</key>
