--- a/.cproject
+++ b/.cproject
@@ -21,7 +21,7 @@
 <folderInfo id="cdt.managedbuild.config.gnu.exe.release.1342493057." name="/" resourcePath="">
 <toolChain id="cdt.managedbuild.toolchain.gnu.exe.release.147699127" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.release">
 <targetPlatform id="cdt.managedbuild.target.gnu.platform.exe.release.1962868766" name="Debug Platform" superClass="cdt.managedbuild.target.gnu.platform.exe.release"/>
-<builder buildPath="${workspace_loc:/PsaiMessageRedirector/PSAI Build}" command="jam" id="cdt.managedbuild.target.gnu.builder.exe.release.777111791" incrementalBuildTarget="-q -j3 -s PS.DEV.DIR=${worlspace_loc} all" keepEnvironmentInBuildfile="true" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.exe.release"/>
+<builder buildPath="${workspace_loc:/PsaiMessageRedirector/}" command="jam" id="cdt.managedbuild.target.gnu.builder.exe.release.777111791" incrementalBuildTarget="-q -s PS.DEV.DIR=${workspace_loc} all" keepEnvironmentInBuildfile="true" managedBuildOn="false" name="Gnu Make Builder" superClass="cdt.managedbuild.target.gnu.builder.exe.release"/>
 <tool id="cdt.managedbuild.tool.gnu.archiver.base.1804326035" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base"/>
 <tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1944722990" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release">
 <option id="gnu.cpp.compiler.exe.release.option.optimization.level.18046520" name="Optimization Level" superClass="gnu.cpp.compiler.exe.release.option.optimization.level" value="gnu.cpp.compiler.optimization.level.most" valueType="enumerated"/>
@@ -31,7 +31,6 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src/message}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src/util}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src/xml}&quot;"/>
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/include}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/client}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/common}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/eedit}&quot;"/>
@@ -39,8 +38,9 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/pslaunch}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/server}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/tools}&quot;"/>
-<listOptionValue builtIn="false" value="&quot;${PS_DEV_DIR}/cs/include&quot;"/>
-<listOptionValue builtIn="false" value="&quot;${PS_DEV_DIR}/cal3d/include&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CrystalSpace/include}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Cal3d/include}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/include}&quot;"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.830716654" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 </tool>
@@ -52,7 +52,6 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src/message}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src/util}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src/xml}&quot;"/>
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/include}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/client}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/common}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/eedit}&quot;"/>
@@ -60,8 +59,9 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/pslaunch}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/server}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/tools}&quot;"/>
-<listOptionValue builtIn="false" value="&quot;${PS_DEV_DIR}/cs/include&quot;"/>
-<listOptionValue builtIn="false" value="&quot;${PS_DEV_DIR}/cal3d/include&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CrystalSpace/include}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Cal3d/include}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/include}&quot;"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1363997412" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 </tool>
@@ -84,7 +84,6 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src/message}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src/util}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PsaiMessageRedirector/src/xml}&quot;"/>
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/include}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/client}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/common}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/eedit}&quot;"/>
@@ -92,8 +91,9 @@
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/pslaunch}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/server}&quot;"/>
 <listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/src/tools}&quot;"/>
-<listOptionValue builtIn="false" value="&quot;${PS_DEV_DIR}/cs/include&quot;"/>
-<listOptionValue builtIn="false" value="&quot;${PS_DEV_DIR}/cal3d/include&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/CrystalSpace/include}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Cal3d/include}&quot;"/>
+<listOptionValue builtIn="false" value="&quot;${workspace_loc:/PlaneShift/include}&quot;"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.assembler.input.173137458" superClass="cdt.managedbuild.tool.gnu.assembler.input"/>
 </tool>
